Fixes #33 - Fixed top margin and dropdown nav on mobile

--- a/src/Euro/CoinBundle/Resources/public/css/style.css
+++ b/src/Euro/CoinBundle/Resources/public/css/style.css
@@ -109,3 +109,9 @@ h6 .tooltip {
 	line-height: 20px;
 }
 
+@media (max-width: 767px) {
+	body {
+		padding-top: 0;
+	}
+}
+
